fix button visibility

--- a/wp-content/themes/travel-by-ticket/style.css
+++ b/wp-content/themes/travel-by-ticket/style.css
@@ -7,7 +7,7 @@
  Version:      1.0.0
 */
 /* Global rule for elementor button */
-.elementor-element.elementor-widget-button {
+.elementor-element.elementor-widget-button:not(.elementor-hidden-tablet):not(.elementor-hidden-mobile) {
     display: flex;
 }
 .elementor-icon-wrapper{
